--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
     <nav class="header-n">
         <a href="./index.html" class="header-logo"><span class="log">Web</span>Studio</a>
         <ul class='header-list'>
-            <li ><a href="./index.html" class="menu">Studio</a></li>
-            <li ><a href="" class="menu">Portfolio</a></li>
+            <li ><a href="./index.html" class="menu menu-stud">Studio</a></li>
+            <li ><a href="" class="menu menu-port">Portfolio</a></li>
             <li ><a href="" class="menu">Contacts</a></li>
         </ul>
     </nav>
