--- a/portfolio.html
+++ b/portfolio.html
@@ -41,15 +41,51 @@
         <li ><button type="button" class="portfolio-btn">Marketing</button></li>
     </ul>
     <ul class="list-oport">
-        <li class="list"><a href="" class="oportuny"><img src="./images/bankapp.jpg" alt="bankapp" width="360" height="300"> <div class="exampl"> <h3 class="charecter">Banking App Interface Concept</h3><p>App</p></div></a></li>
-        <li class="list"><a href="" class="oportuny"><img src="./images/nfc.jpg" alt="paypall" width="360" height="300"> <div class="exampl"> <h3 class="charecter">Cashless Payment</h3><p>Marketing</p></div></a></li>
-        <li class="list"><a href="" class="oportuny"><img src="./images/comp.jpg" alt="computer and phone" width="360" height="300"> <div class="exampl"> <h3 class="charecter">Meditaion App</h3><p>App</p></div></a></li>
-        <li class="list"><a href="" class="oportuny"><img src="./images/driver.jpg" alt="taxi" width="360" height="300"> <div class="exampl"> <h3 class="charecter">Taxi Service</h3><p>Marketing</p></div></a></li>
-        <li class="list"><a href="" class="oportuny"><img src="./images/wallpaper.jpg" alt="screen" width="360" height="300"> <div class="exampl"> <h3 class="charecter">Screen Illustrations</h3><p>Design</p></div></a></li>
-        <li class="list"><a href="" class="oportuny"><img src="./images/girl.jpg" alt="online" width="360" height="300"> <div class="exampl"> <h3 class="charecter">Online Courses</h3><p>Marketing</p></div></a></li>
-        <li class="list"><a href="" class="oportuny"><img src="./images/feeleasy.jpg" alt="Instagram" width="360" height="300"> <div class="exampl"> <h3 class="charecter">Instagram Stories Concept</h3><p>Design</p></div></a></li>
-        <li class="list"><a href="" class="oportuny"><img src="./images/shopping.jpg" alt="Food" width="360" height="300"> <div class="exampl"> <h3 class="charecter">Organic Food</h3><p>Web Site</p></div></a></li>
-        <li class="list"><a href="" class="oportuny"><img src="./images/coffee.jpg" alt="Fresh drink" width="360" height="300"> <div class="exampl"> <h3 class="charecter">Fresh Coffee</h3><p>Web Site</p></div></a></li>
+        <li class="list"><a href="" class="oportuny">
+            <div class="oport-top">
+                <img src="./images/bankapp.jpg" alt="bankapp" width="360" height="300"> 
+            <p class="app-text"></p> </div>
+            <div class="exampl"> <h3 class="charecter">Banking App Interface Concept</h3><p>App</p></div></a></li>
+        <li class="list"><a href="" class="oportuny">
+            <div class="oport-top">
+                <img src="./images/nfc.jpg" alt="paypall" width="360" height="300">
+            <p class="app-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> </div>
+            <div class="exampl"> <h3 class="charecter">Cashless Payment</h3><p>Marketing</p></div></a></li>
+        <li class="list"><a href="" class="oportuny">
+            <div class="oport-top">
+                <img src="./images/comp.jpg" alt="computer and phone" width="360" height="300"> 
+            <p class="app-text"></p></div>
+            <div class="exampl"> <h3 class="charecter">Meditaion App</h3><p>App</p></div></a></li>
+        <li class="list"><a href="" class="oportuny">
+            <div class="oport-top">
+                <img src="./images/driver.jpg" alt="taxi" width="360" height="300"> 
+            <p class="app-text"></p> </div>
+            <div class="exampl"> <h3 class="charecter">Taxi Service</h3><p>Marketing</p></div></a></li>
+        <li class="list"><a href="" class="oportuny">
+            <div class="oport-top">
+                <img src="./images/wallpaper.jpg" alt="screen" width="360" height="300">
+            <p class="app-text"></p> </div>
+            <div class="exampl"> <h3 class="charecter">Screen Illustrations</h3><p>Design</p></div></a></li>
+        <li class="list"><a href="" class="oportuny">
+            <div class="oport-top">
+                <img src="./images/girl.jpg" alt="online" width="360" height="300">
+            <p class="app-text"></p> </div>
+            <div class="exampl"> <h3 class="charecter">Online Courses</h3><p>Marketing</p></div></a></li>
+        <li class="list"><a href="" class="oportuny">
+            <div class="oport-top">
+                <img src="./images/feeleasy.jpg" alt="Instagram" width="360" height="300">
+            <p class="app-text"></p> </div>
+            <div class="exampl"> <h3 class="charecter">Instagram Stories Concept</h3><p>Design</p></div></a></li>
+        <li class="list"><a href="" class="oportuny">
+            <div class="oport-top">
+                <img src="./images/shopping.jpg" alt="Food" width="360" height="300">
+            <p class="app-text"></p></div>
+            <div class="exampl"> <h3 class="charecter">Organic Food</h3><p>Web Site</p></div></a></li>
+        <li class="list"><a href="" class="oportuny">
+            <div class="oport-top">
+                <img src="./images/coffee.jpg" alt="Fresh drink" width="360" height="300">
+            <p class="app-text"></p></div> 
+            <div class="exampl"> <h3 class="charecter">Fresh Coffee</h3><p>Web Site</p></div></a></li>
     </ul>
 </div>
 </section>
