--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
             </ul></div>
 </div>
         </footer>
-    
+    <div class="backdrop">
+        <div class="modal">
+            <button type="button" class="modal-close"></button>
+        </div>
+    </div>
     </body>
 </html>
