--- a/index.html
+++ b/index.html
@@ -203,8 +203,11 @@
         </footer>
     <div class="backdrop">
         <div class="modal">
-            <button type="button" class="modal-close"></button>
+            <button type="button" class="modal-close"><svg width="24" height="24">
+                <use href="./images/icons.svg#icon-closeblack"></use>
+            </svg></button>
         </div>
     </div>
+    <script src="./modal.js/modal.js"></script>
     </body>
 </html>
