--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="title">
     <div class="container title-container">
         <h1 class="title-text">Effective Solutions for Your Business</h1>
-        <button type="button" class="btn">Order Service</button>
+        <button data-modal-open type="button"  class="btn">Order Service</button>
     </div>
     </section>
         <section class="info">
@@ -203,7 +203,7 @@
         </footer>
     <div class="backdrop">
         <div class="modal">
-            <button type="button" class="modal-close"><svg width="24" height="24">
+            <button type="button" class="modal-close" data-modal-close><svg width="24" height="24">
                 <use href="./images/icons.svg#icon-closeblack"></use>
             </svg></button>
         </div>
