--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="title">
     <div class="container title-container">
         <h1 class="title-text">Effective Solutions for Your Business</h1>
-        <button data-modal-open type="button"  class="btn">Order Service</button>
+        <button  type="button"  class="btn" data-modal-open>Order Service</button>
     </div>
     </section>
         <section class="info">
@@ -201,8 +201,8 @@
             </ul></div>
 </div>
         </footer>
-    <div class="backdrop">
-        <div class="modal">
+    <div class="backdrop is-hidden " data-modal>
+        <div class="modal ">
             <button type="button" class="modal-close" data-modal-close><svg width="24" height="24">
                 <use href="./images/icons.svg#icon-closeblack"></use>
             </svg></button>
