--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </footer>
     <div class="backdrop is-hidden " data-modal>
         <div class="modal ">
-            <button type="button" class="modal-close" data-modal-close><svg width="24" height="24">
+            <button type="button" class="modal-close" data-modal-close><svg class="icon-clos"    width="8" height="8">
                 <use href="./images/icons.svg#icon-closeblack"></use>
             </svg></button>
         </div>
